CI pipeline refactored & dotnet vulnerability scan added

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,14 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 8.0.x
-      - name: Restore dependencies
-        run: dotnet restore DRN.sln
+      - uses: actions/checkout@v4
+      - name: Setup SDK
+        uses: ./.github/workflows/actions/setup-sdk
       - name: Build
-        run: dotnet build DRN.sln --no-restore
+        uses: ./.github/workflows/actions/dotnet-build
       - name: Test
         run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal
