--- a/.github/workflows/actions/scan-vulnerabilities/action.yml
+++ b/.github/workflows/actions/scan-vulnerabilities/action.yml
@@ -3,7 +3,7 @@ runs:
   using: "composite"
   steps:
     - name: Scan vulnerabilities
-    - shell: bash
+      shell: bash
       run: |
         packages=$(dotnet list package --include-transitive --vulnerable)
         if [[ "$packages" == *"has the following vulnerable packages"* ]]; then
