Scan nuget vulnerabilities for release builds

--- a/.github/workflows/actions/dotnet-build-release/action.yml
+++ b/.github/workflows/actions/dotnet-build-release/action.yml
@@ -5,6 +5,8 @@ runs:
     - name: Restore dependencies
       shell: bash
       run: dotnet restore DRN.slnx
+    - name: Scan vulnerabilities
+      uses: ./.github/workflows/actions/scan-nuget-vulnerabilities
     - name: Build solution
       shell: bash
       run: dotnet build DRN.slnx --no-restore --no-incremental --configuration Release /p:Version=${VERSION}
