Drn app csrf support refactored

--- a/Sample.Hosted/package.json
+++ b/Sample.Hosted/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "sass": "^1.93.2",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "typescript": "^5.9.3"
   }
 }
